# crud_api

./: .env  README.md  docker-compose.yml  pyproject.toml
backend/: crud.py  database.py
